Began working on the result section.

--- a/Report/biblib.bib
+++ b/Report/biblib.bib
@@ -1,3 +1,4 @@
+Books
 @book{cpplang4,
 	author		= "Bjarne Stroustrup",
 	title		= "The C++ Programming Language",
@@ -38,9 +39,32 @@ Code solution links
 
 
 
+Links
+@misc{wikiDouble,
+	title 			= {{Wikipedia} - How to convert string to char array in C++},
+	howpublished	= {https://en.wikipedia.org/wiki/Double-precision_floating-point_format},
+	note			= {Accessed: 2017-10-15}
+}
+
+@misc{cpp11FAQ,
+	title 			= {C++11 - the new ISO C++ standard},
+	howpublished	= {http://www.stroustrup.com/C++11FAQ.html},
+	note			= {Accessed: 2017-10-15}
+}
+
+@misc{doubleArithmetic,
+	title 			= {Double precision floating point arithmetic},
+	howpublished	= {http://web.mit.edu/hyperbook/Patrikalakis-Maekawa-Cho/node47.html},
+	note			= {Accessed: 2017-10-15}
+}
+
+
+
+
+
 
 From Computer Science - UiT
-@article{CGD_ProjPlanRep2016,
+@article{CGDProjPlanRep2016,
 	abstract 	= {Project plan/sketch of the Computer Game Design project.},
 	author 		= {S{\ae}ther, Paul Knutson},
 	pages 		= {3},
@@ -49,7 +73,7 @@ From Computer Science - UiT
 	year 		= {2016}
 }
 
-@misc{CGD_ProjRepository2016,
+@misc{CGDProjRepository2016,
 	abstract 	= {Link to the project git repository.},
 	author 		= {{Paul Knutson S{\ae}ther}},
 	title 		= {{Paul Knutson S{\ae}ther - mynewapplication}},
